# mtrack

./: CONTRIBUTING.md  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: audit-backend.yaml  audit-frontend.yaml  ci-backend.yaml  ci-frontend.yaml
backend/: CONTRIBUTING.md  Cargo.toml  README.md  example.key  root.crt
backend/data/: example.pem
backend/src/: app.rs  lib.rs  main.rs  utils.rs
backend/src/app/: mod.rs
backend/src/app/handlers/: get_login.rs  get_positions.rs  health_check.rs  home.rs  login.rs  logout.rs  mod.rs  post_login.rs  post_position.rs  postpos.rs  tracker.rs
backend/src/app/handlers/utils/: mod.rs
backend/tests/: get_login.rs  get_positions.rs  health_check.rs  home.rs  login.rs  logout.rs  post_login.rs  post_position.rs  postpos.rs  tracker.rs
backend/tests-data/: download_users.json  upload_users.json
backend/tests/helpers/: mod.rs
frontend/: .gitignore  CONTRIBUTING.md  README.md  jest.config.js  package-lock.json  package.json  tsconfig.json  webpack.config.js
frontend/public/: index.html
frontend/public/assets/app/css/: mtrack.css  tracker.css
frontend/public/login/: index.html
frontend/public/map/: index.html
frontend/public/postpos/: index.html
frontend/public/tracker/: index.html
frontend/src/dynamic/: index.ts
frontend/src/dynamic/map/: app.tsx  index.tsx
frontend/src/dynamic/map/components/: placeholder.tsx  tracker-map.tsx
frontend/src/dynamic/postpos/: index.ts
frontend/src/dynamic/tracker/: app.tsx
frontend/src/dynamic/tracker/components/: logout.tsx  (+2 more)
frontend/src/static/: index.ts
frontend/src/static/pages/: _page.tsx  home.tsx  login.tsx  map.tsx  postpos.tsx  tracker.tsx
frontend/tests/dynamic/tracker/: app.test.tsx
(+9 files in other folders)
