[package]
name = "mtrack"
version = "0.1.0"
edition = "2021"
description = ""
documentation = ""
readme = "README.md"
repository = "https://github.com/shtsoft/mtrack"
license = "GPL-3.0-or-later"
keywords = []
categories = []

[dependencies]
axum = "0.7"
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
hyper = { version = "1.3", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
rustls-pemfile = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.38", features = ["full"] }
tokio-rustls = "0.26"
tower = { version = "0.4", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
reqwest = "0.12"
