[package]
name = "mtrack"
version = "0.2.0"
edition = "2021"
description = "A position tracking app."
documentation = ""
readme = "README.md"
repository = "https://github.com/shtsoft/mtrack"
license = "GPL-3.0-or-later"
keywords = []
categories = []

[dependencies]
axum = "0.7"
bcrypt = "0.15"
clap = { version = "4.5", features = ["derive"] }
cookie = "0.18"
futures = "0.3"
hyper = { version = "1.3", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
rand = "0.8"
rustls-pemfile = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = "0.13"
thiserror = "1.0"
time = "0.3"
tokio = { version = "1.38", features = ["full"] }
tokio-rustls = "0.26"
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
reqwest = { version = "0.12", features = ["cookies"] }
